change some colors

--- a/personal_web/src/index.css
+++ b/personal_web/src/index.css
@@ -122,10 +122,10 @@
         --card-3: 98 100% 93%;
         --border-3: 98 100% 15.8%;
 
-        --marker-1: 233 100% 29.6%;
-        --marker-2: 189 100% 34%;
-        --marker-3: 51 67.8% 46.7%;
-        --marker-4: 338 100% 26.1%;
+        --marker-1: 233 100% 29.6%; /*deep blue*/
+        --marker-2: 189 100% 34%; /*light blue*/
+        --marker-3: 34 67.8% 46.7%; /*yello*/
+        --marker-4: 338 100% 26.1%; /*deep red*/
         --marker-text: 213 31% 91%;
 
         --card: 0 0% 100%;
